running for the first time

--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
         "dev": "next dev",
         "export": "NODE_ENV=production next export",
         "generate-blocks": "env-cmd node scripts/createBlocks.js && npm run relay",
-        "generate-models": "env-cmd -f ../../../../.env node node_modules/@symbio/headless/dist/scripts/generateModels.js",
-        "graphql-codegen": "env-cmd -f ../../../../.env graphql-codegen --config codegen.yml",
+        "generate-models": "env-cmd -f .env node node_modules/@symbio/headless/dist/scripts/generateModels.js",
+        "graphql-codegen": "env-cmd -f .env graphql-codegen --config codegen.yml",
         "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "relay": "relay-compiler",
         "start": "NODE_ENV=production next start",
         "storybook": "start-storybook --no-dll",
         "test": "jest",
         "test:watch": "jest --watch",
-        "update-strings": "env-cmd -f ../../../../.env node node_modules/@symbio/headless/dist/scripts/updateStrings.js"
+        "update-strings": "env-cmd -f .env node node_modules/@symbio/headless/dist/scripts/updateStrings.js"
     },
     "engines": {
         "node": ">=14.0.0"
     },
     "dependencies": {
         "@react-google-maps/api": "^2.1.1",
-        "@symbio/cms": "canary",
-        "@symbio/cms-datocms": "canary",
-        "@symbio/headless": "canary",
+        "@symbio/cms": "^1.0.0-canary.44",
+        "@symbio/cms-datocms": "^1.0.0-canary.44",
+        "@symbio/headless": "^1.0.0-canary.44",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "clsx": "^1.1.1",
@@ -45,8 +45,8 @@
         "next": "^10.2.0",
         "next-pwa": "^5.2.21",
         "path-to-regexp": "^6.2.0",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-image-lightbox": "^5.1.1",
         "react-relay": "^11.0.2",
         "react-responsive-carousel": "^3.2.18",
@@ -89,6 +89,7 @@
         "@welldone-software/why-did-you-render": "^6.1.1",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
+        "babel-plugin-relay": "^11.0.2",
         "dotenv": "^8.2.0",
         "env-cmd": "^10.1.0",
         "eslint": "^7.25.0",
@@ -99,6 +100,9 @@
         "lint-staged": "^10.5.4",
         "prettier": "^2.2.1",
         "react-docgen-typescript-loader": "^3.7.2",
+        "relay-compiler": "^11.0.2",
+        "relay-compiler-language-typescript": "^14.0.0",
+        "relay-config": "^11.0.2",
         "sass": "^1.32.12",
         "ts-jest": "^26.5.5",
         "typescript": "^4.2.4"
