Updated to latest canary of devstack

--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
         "node": ">=14.0.0"
     },
     "dependencies": {
-        "@react-google-maps/api": "^2.2.0",
-        "@symbio/cms": "^1.0.0-canary.62",
-        "@symbio/cms-datocms": "^1.0.0-canary.62",
-        "@symbio/headless": "^1.0.0-canary.62",
-        "axios": "^0.21.1",
+        "@react-google-maps/api": "^2.7.0",
+        "@symbio/cms": "canary",
+        "@symbio/cms-datocms": "canary",
+        "@symbio/headless": "canary",
+        "axios": "^0.24.0",
         "busboy": "^0.3.1",
         "clsx": "^1.1.1",
-        "core-js": "^3.17.1",
-        "dayjs": "^1.10.6",
+        "core-js": "^3.19.1",
+        "dayjs": "^1.10.7",
         "formik": "^2.2.9",
-        "graphql-tag": "^2.12.5",
-        "hls.js": "^1.0.10",
-        "html-react-parser": "^1.2.8",
-        "html-to-text": "^8.0.0",
+        "graphql-tag": "^2.12.6",
+        "hls.js": "^1.1.1",
+        "html-react-parser": "^1.4.0",
+        "html-to-text": "^8.1.0",
         "mandrill-api": "^1.0.45",
         "next": "^11.1.2",
-        "next-pwa": "^5.3.1",
+        "next-pwa": "^5.4.0",
         "path-to-regexp": "^6.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -51,9 +51,9 @@
         "react-relay": "^12.0.0",
         "react-responsive-carousel": "^3.2.21",
         "relay-runtime": "^12.0.0",
-        "slugify": "^1.6.0",
+        "slugify": "^1.6.2",
         "uuid": "^8.3.2",
-        "yup": "^0.32.9"
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@babel/core": "^7.15.0",
@@ -76,7 +76,6 @@
         "@svgr/webpack": "^5.5.0",
         "@tailwindcss/line-clamp": "^0.2.1",
         "@types/busboy": "^0.2.4",
-        "@types/hls.js": "^1.0.0",
         "@types/html-to-text": "^8.0.1",
         "@types/jest": "^27.0.1",
         "@types/mandrill-api": "^1.0.30",
