--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "description": "SYMBIO Next.js Devstack",
+    "description": "SYMBIO Next.js DatoCMS Starter",
     "repository": {
         "type": "git",
         "url": "https://github.com/SYMBIO/next-devstack"
@@ -8,12 +8,12 @@
     "scripts": {
         "build": "env-cmd --silent graphql-codegen --config codegen.yml && npm run relay && NODE_ENV=production next build",
         "build-storybook": "build-storybook -c .storybook -o ./public/storybook --quiet",
-        "create-component": "node node_modules/@symbio/headless/dist/scripts/createComponent.js $F $N",
-        "create-story": "node node_modules/@symbio/headless/dist/scripts/createStory.js $F $N",
+        "create-component": "node node_modules/@symbio/headless/scripts/createComponent.js $F $N",
+        "create-story": "node node_modules/@symbio/headless/scripts/createStory.js $F $N",
         "dev": "next dev",
         "export": "NODE_ENV=production next export",
-        "generate-blocks": "env-cmd node node_modules/@symbio/headless/dist/scripts/createBlocks.js && npm run relay",
-        "generate-models": "env-cmd -f .env node node_modules/@symbio/headless/dist/scripts/generateModels.js",
+        "generate-blocks": "env-cmd node node_modules/@symbio/headless/scripts/createBlocks.js && npm run relay",
+        "generate-models": "env-cmd -f .env node node_modules/@symbio/headless/scripts/generateModels.js",
         "graphql-codegen": "env-cmd -f .env graphql-codegen --config codegen.yml",
         "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "relay": "relay-compiler",
@@ -21,7 +21,7 @@
         "storybook": "start-storybook --no-dll",
         "test": "jest",
         "test:watch": "jest --watch",
-        "update-strings": "env-cmd -f .env node node_modules/@symbio/headless/dist/scripts/updateStrings.js"
+        "update-strings": "env-cmd -f .env node node_modules/@symbio/headless/scripts/updateStrings.js"
     },
     "engines": {
         "node": ">=14.0.0"
@@ -31,95 +31,81 @@
         "@symbio/cms": "canary",
         "@symbio/cms-datocms": "canary",
         "@symbio/headless": "canary",
-        "axios": "^0.24.0",
-        "busboy": "^0.3.1",
+        "axios": "^0.26.0",
+        "busboy": "^1.4.0",
         "clsx": "^1.1.1",
-        "core-js": "^3.19.1",
-        "dayjs": "^1.10.7",
+        "core-js": "^3.21.1",
+        "dayjs": "^1.10.8",
         "formik": "^2.2.9",
         "graphql-tag": "^2.12.6",
-        "hls.js": "^1.1.1",
-        "html-react-parser": "^1.4.0",
+        "hls.js": "^1.1.5",
+        "html-react-parser": "^1.4.8",
         "html-to-text": "^8.1.0",
         "mandrill-api": "^1.0.45",
-        "next": "^11.1.2",
-        "next-pwa": "^5.4.0",
+        "next": "^12.1.0",
+        "next-pwa": "^5.4.5",
         "path-to-regexp": "^6.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-image-lightbox": "^5.1.4",
         "react-relay": "^12.0.0",
-        "react-responsive-carousel": "^3.2.21",
+        "react-responsive-carousel": "^3.2.23",
         "relay-runtime": "^12.0.0",
-        "slugify": "^1.6.2",
+        "slugify": "^1.6.5",
         "uuid": "^8.3.2",
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.0",
-        "@graphql-codegen/cli": "^2.1.1",
-        "@graphql-codegen/introspection": "2.1.0",
-        "@graphql-codegen/schema-ast": "^2.1.0",
-        "@next/bundle-analyzer": "^11.1.2",
-        "@storybook/addon-a11y": "^6.3.7",
-        "@storybook/addon-actions": "^6.3.7",
-        "@storybook/addon-backgrounds": "^6.3.7",
-        "@storybook/addon-console": "^1.2.3",
-        "@storybook/addon-controls": "^6.3.7",
-        "@storybook/addon-docs": "^6.3.7",
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/introspection": "2.1.1",
+        "@graphql-codegen/schema-ast": "^2.4.1",
+        "@next/bundle-analyzer": "^12.1.0",
+        "@storybook/addon-a11y": "^6.4.19",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-backgrounds": "^6.4.19",
+        "@storybook/addon-controls": "^6.4.19",
+        "@storybook/addon-docs": "^6.4.19",
         "@storybook/addon-postcss": "^2.0.0",
-        "@storybook/addon-storysource": "^6.3.7",
-        "@storybook/addon-viewport": "^6.3.7",
-        "@storybook/addons": "^6.3.7",
-        "@storybook/client-api": "^6.3.7",
-        "@storybook/react": "^6.3.7",
-        "@svgr/webpack": "^5.5.0",
-        "@tailwindcss/line-clamp": "^0.2.1",
-        "@types/busboy": "^0.2.4",
-        "@types/html-to-text": "^8.0.1",
-        "@types/jest": "^27.0.1",
+        "@storybook/addon-storysource": "^6.4.19",
+        "@storybook/addon-viewport": "^6.4.19",
+        "@storybook/addons": "^6.4.19",
+        "@storybook/client-api": "^6.4.19",
+        "@storybook/react": "^6.4.19",
+        "@svgr/webpack": "^6.2.1",
+        "@tailwindcss/line-clamp": "^0.3.1",
+        "@types/busboy": "^1.3.0",
+        "@types/html-to-text": "^8.1.0",
+        "@types/jest": "^27.4.1",
         "@types/mandrill-api": "^1.0.30",
-        "@types/node": "^16.7.10",
-        "@types/object-fit-images": "^3.2.2",
-        "@types/react": "^17.0.19",
-        "@types/react-dom": "^17.0.9",
-        "@types/uuid": "^8.3.1",
+        "@types/node": "^16.11.26",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.13",
+        "@types/uuid": "^8.3.4",
         "@types/yup": "^0.29.13",
-        "@typescript-eslint/eslint-plugin": "^4.30.0",
-        "@typescript-eslint/parser": "^4.30.0",
-        "@welldone-software/why-did-you-render": "^6.2.1",
-        "autoprefixer": "^10.3.3",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.2.2",
-        "babel-plugin-relay": "^12.0.0",
-        "dotenv": "^10.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "@welldone-software/why-did-you-render": "^6.2.3",
+        "autoprefixer": "^10.4.2",
+        "dotenv": "^16.0.0",
         "env-cmd": "^10.1.0",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint": "^8.10.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.25.1",
-        "jest": "^27.1.0",
-        "lint-staged": "^11.1.2",
-        "postcss": "^8.3.6",
-        "prettier": "^2.3.2",
+        "eslint-plugin-react": "^7.29.3",
+        "jest": "^27.5.1",
+        "lint-staged": "^12.3.5",
+        "postcss": "^8.4.8",
+        "prettier": "^2.5.1",
         "react-docgen-typescript-loader": "^3.7.2",
         "relay-compiler": "^12.0.0",
-        "relay-compiler-language-typescript": "^14.1.0",
-        "relay-config": "^12.0.0",
-        "sass": "^1.39.0",
-        "sass-loader": "^10.2.0",
-        "storybook-addon-next-router": "^3.0.8",
-        "tailwindcss": "^2.2.9",
-        "ts-jest": "^27.0.5",
-        "typescript": "^4.4.2"
-    },
-    "babel": {
-        "presets": [
-            "next/babel"
-        ],
-        "plugins": [
-            "relay"
-        ]
+        "relay-compiler-language-typescript": "^15.0.1",
+        "relay-config": "^12.0.1",
+        "sass": "^1.49.9",
+        "sass-loader": "^12.6.0",
+        "storybook-addon-next-router": "^3.1.1",
+        "tailwindcss": "^3.0.23",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.6.2"
     },
     "prettier": {
         "semi": true,
@@ -129,31 +115,25 @@
         "singleQuote": true
     },
     "eslintConfig": {
+        "env": {
+            "browser": true,
+            "es2021": true,
+            "node": true
+        },
         "parser": "@typescript-eslint/parser",
-        "plugins": [
-            "react",
-            "@typescript-eslint",
-            "prettier"
-        ],
-        "extends": [
-            "eslint:recommended",
-            "plugin:react/recommended",
-            "plugin:@typescript-eslint/eslint-recommended",
-            "plugin:@typescript-eslint/recommended",
-            "plugin:prettier/recommended"
-        ],
         "parserOptions": {
-            "ecmaVersion": 2018,
-            "sourceType": "module",
             "ecmaFeatures": {
                 "jsx": true
-            }
+            },
+            "ecmaVersion": 12,
+            "sourceType": "module"
         },
-        "rules": {},
-        "settings": {
-            "react": {
-                "version": "detect"
-            }
-        }
+        "extends": [
+            "eslint:recommended",
+            "plugin:@typescript-eslint/recommended",
+            "next",
+            "next/core-web-vitals",
+            "plugin:prettier/recommended"
+        ]
     }
 }
