--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "dotenv": "^16.0.0",
         "env-cmd": "^10.1.0",
         "eslint": "^8.10.0",
+        "eslint-config-next": "^12.1.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.3",
